--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "babel-loader": "^5.1.4",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.11"
+  },
+  "dependencies": {
+    "eventemitter2": "^0.4.14"
   }
 }
