--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "devDependencies": {
     "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
+    "css-loader": "^0.15.1",
     "node-libs-browser": "^0.5.2",
+    "style-loader": "^0.12.3",
     "webpack": "^1.9.11"
   },
   "dependencies": {
