--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "eventemitter2": "^0.4.14",
     "jquery": "^2.1.4",
-    "jquery-ui": "^1.10.5"
+    "jquery-ui": "^1.10.5",
+    "react": "^0.13.3"
   }
 }
