--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.6.15",
     "css-loader": "^0.15.1",
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
