Update earth rotation when user selects a city
[#98170942]

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eventemitter2": "^0.4.14",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-mixin": "^1.4.0"
   }
 }
