--- a/deploy/s3_website.yml
+++ b/deploy/s3_website.yml
@@ -1,17 +1,18 @@
 s3_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['S3_SECRET_KEY'] %>
-s3_bucket: grasp-seasons.concord.org
+s3_bucket: models-resources
+s3_key_prefix: grasp-seasons
 s3_endpoint: us-east-1
 gzip: true
 
 <% if ENV['TRAVIS_BRANCH'] == 'production' %>
 # in this case we are going to deploy this branch to the top level of the domain
 # so we need to ignore the version and branch folders
-ignore_on_server: ^(version/|branch/)
+ignore_on_server: ^grasp-seasons/(version/|branch/)
 <% else %>
 # in this case we are going to deploy this code to a subfolder of either the branch
 # or version folder. So ignore everything except this folder.
-ignore_on_server: ^(?!<%= Regexp.escape(ENV['DEPLOY_DIR']) %>/)
+ignore_on_server: ^(?!grasp-seasons/<%= Regexp.escape(ENV['DEPLOY_DIR']) %>/)
 <% end %>
 max_age:
   "*": 0
