--- a/deploy/s3_website.yml
+++ b/deploy/s3_website.yml
@@ -15,6 +15,6 @@ ignore_on_server: ^grasp-seasons/(version/|branch/)
 ignore_on_server: ^(?!grasp-seasons/<%= Regexp.escape(ENV['DEPLOY_DIR']) %>/)
 <% end %>
 max_age:
-  "grasp-seasons/*": 0
-  "grasp-seasons/version/*": 31536000 # 1 year in seconds
+  "grasp-seasons/*": 600 # 10 minutes
+  "grasp-seasons/version/*": 31536000 # 1 year
   "grasp-seasons/branch/*": 0
