--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
     "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.6.15",
-    "css-loader": "^0.15.1",
+    "style-loader": "^0.13.0",
+    "css-loader": "^0.23.1",
+    "less-loader": "^2.2.2",
     "node-libs-browser": "^0.5.2",
-    "style-loader": "^0.12.3",
     "webpack": "^1.9.11",
     "copy-webpack-plugin": "^1.1.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "eventemitter2": "^0.4.14",
     "iframe-phone": "^1.1.3",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
     "react-addons-update": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-mixin": "^1.4.0"
   }
 }
