--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.6.15",
-    "style-loader": "^0.13.0",
+    "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "less-loader": "^2.2.2",
     "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.11",
-    "copy-webpack-plugin": "^1.1.1"
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.9.11"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
