--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-runtime": "^5.6.15",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "es6-promise": "^3.0.2",
     "file-loader": "^0.8.5",
     "less-loader": "^2.2.2",
     "node-libs-browser": "^0.5.2",
