--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "grasp-seasons",
   "version": "0.2.0",
   "description": "",
+  "main": "dist-lib/grasp-seasons.js",
+  "files": [
+    "dist-lib"
+  ],
+  "scripts": {
+    "prepublish": "WEBPACK_TARGET=lib webpack"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/concord-consortium/grasp-seasons.git"
@@ -30,6 +37,7 @@
     "imports-loader": "^0.6.5",
     "less-loader": "^2.2.2",
     "node-libs-browser": "^0.5.2",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.9.11"
