--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grasp-seasons",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "",
   "main": "dist-lib/grasp-seasons.js",
   "files": [
@@ -26,6 +26,10 @@
     "url": "https://github.com/concord-consortium/grasp-seasons/issues"
   },
   "homepage": "https://github.com/concord-consortium/grasp-seasons",
+  "peerDependencies": {
+    "react": ">=0.14.7",
+    "react-dom": ">=0.14.7"
+  },
   "devDependencies": {
     "babel-core": "^5.6.4",
     "babel-loader": "^5.1.4",
@@ -35,6 +39,7 @@
     "es6-promise": "^3.0.2",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
+    "less": "^2.6.1",
     "less-loader": "^2.2.2",
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
@@ -48,10 +53,10 @@
     "iframe-phone": "^1.1.3",
     "jquery": "^2.1.4",
     "jquery-ui": "^1.10.5",
-    "react": "^0.14.7",
-    "react-addons-update": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-mixin": "^1.4.0",
+    "react": "^15.0.1",
+    "react-addons-update": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-mixin": "^3.0.5",
     "three": "^0.74.0"
   }
 }
