--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-language: ruby
-rvm:
-- 2.2.0
+language: node_js
+node_js:
+  - 5
 install:
-- travis_retry gem install s3_website -v 2.12.3
-- travis_retry npm install
+  - travis_retry gem install s3_website -v 2.12.3
+  - travis_retry npm install
 before_script: WEBPACK_OPTIMIZE=true webpack
 script: deploy/s3_deploy.sh
 cache:
