--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eventemitter2": "^0.4.14",
     "iframe-phone": "^1.1.3",
     "jquery": "^2.1.4",
-    "jquery-ui": "^1.10.5",
+    "jquery-ui": "1.10.5",
     "react": "^15.0.1",
     "react-addons-update": "^15.0.1",
     "react-dom": "^15.0.1",
