--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grasp-seasons",
-  "version": "0.13.6",
+  "version": "0.13.7",
   "description": "",
   "main": "dist-lib/grasp-seasons.js",
   "files": [
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "brace-expansion": "^1.1.7",
     "eventemitter2": "^0.4.14",
     "iframe-phone": "^1.1.3",
     "jquery": "^3.3.1",
