--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-addons-update": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-mixin": "^3.0.5",
+    "reduce-css-calc": "^2.1.4",
     "three": "^0.84.0"
   }
 }
