--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grasp-seasons",
-  "version": "0.13.7",
+  "version": "0.13.8",
   "description": "",
   "main": "dist-lib/grasp-seasons.js",
   "files": [
@@ -31,35 +31,39 @@
     "react-dom": ">=0.14.7"
   },
   "devDependencies": {
-    "babel-core": "^5.6.4",
-    "babel-loader": "^5.1.4",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "babel-runtime": "^5.6.15",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.1",
-    "es6-promise": "^3.0.2",
-    "file-loader": "^0.8.5",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^0.26.4",
+    "es6-promise": "^3.3.1",
+    "file-loader": "^2.0.0",
     "imports-loader": "^0.6.5",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.2",
+    "json-loader": "^0.5.7",
+    "less": "^2.7.2",
+    "less-loader": "^4.1.0",
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.13.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6",
-    "brace-expansion": "^1.1.7",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^3.4.0",
+    "brace-expansion": "^1.1.11",
     "eventemitter2": "^0.4.14",
-    "iframe-phone": "^1.1.3",
+    "iframe-phone": "^1.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "1.12.1",
-    "react": "^15.0.1",
-    "react-addons-update": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-mixin": "^3.0.5",
-    "reduce-css-calc": "^2.1.4",
+    "react": "^15.6.2",
+    "react-addons-update": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-mixin": "^3.1.1",
     "three": "^0.84.0"
   }
 }
