--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "less": "^2.7.2",
     "less-loader": "^4.1.0",
     "node-libs-browser": "^0.5.2",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
@@ -60,6 +63,8 @@
     "iframe-phone": "^1.2.0",
     "jquery": "^3.3.1",
     "jquery-ui": "1.12.1",
+    "node-sass": "^4.11.0",
+    "popper.js": "^1.14.6",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.2",
     "react-dom": "^15.6.2",
