--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dist-lib"
   ],
   "scripts": {
-    "prepublish": "WEBPACK_TARGET=lib webpack"
+    "build": "webpack",
+    "build:lib": "WEBPACK_TARGET=lib webpack",
+    "clean": "rimraf dist dist-lib",
+    "prepublishOnly": "WEBPACK_TARGET=lib webpack",
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -27,48 +31,37 @@
   },
   "homepage": "https://github.com/concord-consortium/grasp-seasons",
   "peerDependencies": {
-    "react": ">=0.14.7",
-    "react-dom": ">=0.14.7"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "babel-runtime": "^5.6.15",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^0.26.4",
-    "es6-promise": "^3.3.1",
-    "file-loader": "^2.0.0",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.7",
-    "less": "^2.7.2",
-    "less-loader": "^4.1.0",
-    "node-libs-browser": "^0.5.2",
-    "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.13.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.0.0",
+    "css-loader": "^6.5.1",
+    "less-loader": "^10.2.0",
+    "postcss-loader": "^6.2.0",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.64.3",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.1.3",
-    "brace-expansion": "^1.1.11",
-    "eventemitter2": "^0.4.14",
-    "iframe-phone": "^1.2.0",
-    "jquery": "^3.3.1",
-    "jquery-ui": "1.12.1",
-    "node-sass": "^4.11.0",
-    "popper.js": "^1.14.6",
-    "react": "^15.6.2",
-    "react-addons-update": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-mixin": "^3.1.1",
-    "three": "^0.84.0"
+    "bootstrap": "^4.6.1",
+    "eventemitter2": "^6.4.5",
+    "iframe-phone": "^1.3.1",
+    "immutability-helper": "^3.1.1",
+    "jquery": "^3.6.0",
+    "jquery-ui": "1.13.0",
+    "popper.js": "^1.16.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-mixin": "^5.0.0",
+    "three": "^0.124.0"
   }
 }
