--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack",
     "build:lib": "WEBPACK_TARGET=lib webpack",
     "clean": "rimraf dist dist-lib",
+    "migrate": "ts-migrate -c \"ts-migrate-full /Users/kswenson/Development/cc-dev/grasp-seasons\"",
     "prepublishOnly": "WEBPACK_TARGET=lib webpack",
     "start": "webpack serve"
   },
@@ -47,6 +48,8 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "ts-migrate": "^0.1.26",
+    "typescript": "^4.5.2",
     "webpack": "^5.64.3",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
@@ -59,8 +62,8 @@
     "jquery": "^3.6.0",
     "jquery-ui": "1.13.0",
     "popper.js": "^1.16.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": ">=16",
+    "react-dom": ">=16",
     "react-mixin": "^5.0.0",
     "three": "^0.124.0"
   }
