--- a/package.json
+++ b/package.json
@@ -31,28 +31,29 @@
     "url": "https://github.com/concord-consortium/grasp-seasons/issues"
   },
   "homepage": "https://github.com/concord-consortium/grasp-seasons",
-  "peerDependencies": {
-    "react": ">=16",
-    "react-dom": ">=16"
-  },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@types/jquery": "^3.5.9",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-mixin": "^2.0.32",
+    "@types/three": "^0.134.0",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "less-loader": "^10.2.0",
-    "postcss-loader": "^6.2.0",
+    "postcss-loader": "^6.2.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
-    "ts-migrate": "^0.1.26",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
-    "webpack": "^5.64.3",
+    "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "bootstrap": "^4.6.1",
@@ -62,9 +63,9 @@
     "jquery": "^3.6.0",
     "jquery-ui": "1.13.0",
     "popper.js": "^1.16.1",
-    "react": ">=16",
-    "react-dom": ">=16",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-mixin": "^5.0.0",
-    "three": "^0.124.0"
+    "three": "^0.135.0"
   }
 }
