--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
+dist: trusty
+sudo: false
 language: node_js
 node_js: lts/*
 install:
-  - travis_retry gem install s3_website -v 2.12.3
-  - travis_retry npm ci
+- travis_retry pyenv global 3.6
+- travis_retry gem install s3_website -v 3.4.0
+- travis_retry pip install awscli --upgrade --user
+- travis_retry npm ci
 script: WEBPACK_OPTIMIZE=true webpack --progress --mode production
 after_success: deploy/s3_deploy.sh
 cache:
