--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "grasp-seasons",
-  "version": "0.13.9",
+  "version": "0.13.10",
   "description": "",
   "main": "dist-lib/grasp-seasons.js",
   "files": [
     "dist-lib"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "webpack",
     "build:lib": "WEBPACK_TARGET=lib webpack",
-    "clean": "rimraf dist dist-lib",
-    "migrate": "ts-migrate -c \"ts-migrate-full /Users/kswenson/Development/cc-dev/grasp-seasons\"",
     "prepublishOnly": "WEBPACK_TARGET=lib webpack",
     "start": "webpack serve"
   },
@@ -32,40 +33,35 @@
   },
   "homepage": "https://github.com/concord-consortium/grasp-seasons",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@types/jquery": "^3.5.9",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-mixin": "^2.0.32",
-    "@types/three": "^0.134.0",
-    "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.0.0",
-    "css-loader": "^6.5.1",
-    "less-loader": "^10.2.0",
-    "postcss-loader": "^6.2.1",
-    "rimraf": "^3.0.2",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "@types/jquery": "^3.5.30",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-mixin": "^2.0.37",
+    "@types/three": "^0.167.1",
+    "autoprefixer": "^10.4.19",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "less-loader": "^12.2.0",
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "bootstrap": "^4.6.1",
-    "eventemitter2": "^6.4.5",
+    "eventemitter2": "^6.4.9",
     "iframe-phone": "^1.3.1",
     "immutability-helper": "^3.1.1",
-    "jquery": "^3.6.0",
-    "jquery-ui": "1.13.0",
+    "jquery": "^3.7.1",
+    "jquery-ui": "1.13.3",
     "popper.js": "^1.16.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-mixin": "^5.0.0",
-    "three": "^0.135.0"
+    "three": "^0.167.1"
   }
 }
