--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@types/react-mixin": "^2.0.37",
     "@types/three": "^0.167.1",
     "autoprefixer": "^10.4.19",
-    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "less-loader": "^12.2.0",
     "postcss-loader": "^8.1.1",
     "sass": "^1.77.8",
