chore: add @stylistic ESLint plugin [PT-188049278]

--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
   },
   "homepage": "https://github.com/concord-consortium/grasp-seasons",
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^2.6.1",
     "@types/jquery": "^3.5.30",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-mixin": "^2.0.37",
     "@types/three": "^0.167.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
     "autoprefixer": "^10.4.19",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
@@ -63,7 +64,7 @@
   "dependencies": {
     "eventemitter2": "^6.4.9",
     "jquery": "^3.7.1",
-    "jquery-ui": "1.13.3",
+    "jquery-ui": "1.14.0",
     "popper.js": "^1.16.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
